# X1Vita

./: .gitignore  CMakeLists.txt  README.md  X1Vita.yml
sce_sys/livearea/contents/: template.xml
src/: bluetooth.c  common.h  debug.c
